src/parser.output
Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: statements statement
    3           | statement

    4 statement: declaration
    5          | assignment

    6 declaration: INT IDENTIFIER ASSIGN expression SEMICOLON

    7 assignment: IDENTIFIER ASSIGN expression SEMICOLON

    8 expression: NUMBER
    9           | IDENTIFIER
   10           | expression PLUS expression
   11           | expression MINUS expression
   12           | expression TIMES expression
   13           | expression DIVIDE expression
   14           | LPAREN expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT (258) 6
    IDENTIFIER (259) 6 7 9
    NUMBER (260) 8
    ASSIGN (261) 6 7
    SEMICOLON (262) 6 7
    PLUS (263) 10
    MINUS (264) 11
    TIMES (265) 12
    DIVIDE (266) 13
    LPAREN (267) 14
    RPAREN (268) 14


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    program (15)
        on left: 1
        on right: 0
    statements (16)
        on left: 2 3
        on right: 1 2
    statement (17)
        on left: 4 5
        on right: 2 3
    declaration (18)
        on left: 6
        on right: 4
    assignment (19)
        on left: 7
        on right: 5
    expression (20)
        on left: 8 9 10 11 12 13 14
        on right: 6 7 10 11 12 13 14


State 0

    0 $accept: • program $end

    INT         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2

    program      go to state 3
    statements   go to state 4
    statement    go to state 5
    declaration  go to state 6
    assignment   go to state 7


State 1

    6 declaration: INT • IDENTIFIER ASSIGN expression SEMICOLON

    IDENTIFIER  shift, and go to state 8


State 2

    7 assignment: IDENTIFIER • ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 9


State 3

    0 $accept: program • $end

    $end  shift, and go to state 10


State 4

    1 program: statements •
    2 statements: statements • statement

    INT         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2

    $default  reduce using rule 1 (program)

    statement    go to state 11
    declaration  go to state 6
    assignment   go to state 7


State 5

    3 statements: statement •

    $default  reduce using rule 3 (statements)


State 6

    4 statement: declaration •

    $default  reduce using rule 4 (statement)


State 7

    5 statement: assignment •

    $default  reduce using rule 5 (statement)


State 8

    6 declaration: INT IDENTIFIER • ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 12


State 9

    7 assignment: IDENTIFIER ASSIGN • expression SEMICOLON

    IDENTIFIER  shift, and go to state 13
    NUMBER      shift, and go to state 14
    LPAREN      shift, and go to state 15

    expression  go to state 16


State 10

    0 $accept: program $end •

    $default  accept


State 11

    2 statements: statements statement •

    $default  reduce using rule 2 (statements)


State 12

    6 declaration: INT IDENTIFIER ASSIGN • expression SEMICOLON

    IDENTIFIER  shift, and go to state 13
    NUMBER      shift, and go to state 14
    LPAREN      shift, and go to state 15

    expression  go to state 17


State 13

    9 expression: IDENTIFIER •

    $default  reduce using rule 9 (expression)


State 14

    8 expression: NUMBER •

    $default  reduce using rule 8 (expression)


State 15

   14 expression: LPAREN • expression RPAREN

    IDENTIFIER  shift, and go to state 13
    NUMBER      shift, and go to state 14
    LPAREN      shift, and go to state 15

    expression  go to state 18


State 16

    7 assignment: IDENTIFIER ASSIGN expression • SEMICOLON
   10 expression: expression • PLUS expression
   11           | expression • MINUS expression
   12           | expression • TIMES expression
   13           | expression • DIVIDE expression

    SEMICOLON  shift, and go to state 19
    PLUS       shift, and go to state 20
    MINUS      shift, and go to state 21
    TIMES      shift, and go to state 22
    DIVIDE     shift, and go to state 23


State 17

    6 declaration: INT IDENTIFIER ASSIGN expression • SEMICOLON
   10 expression: expression • PLUS expression
   11           | expression • MINUS expression
   12           | expression • TIMES expression
   13           | expression • DIVIDE expression

    SEMICOLON  shift, and go to state 24
    PLUS       shift, and go to state 20
    MINUS      shift, and go to state 21
    TIMES      shift, and go to state 22
    DIVIDE     shift, and go to state 23


State 18

   10 expression: expression • PLUS expression
   11           | expression • MINUS expression
   12           | expression • TIMES expression
   13           | expression • DIVIDE expression
   14           | LPAREN expression • RPAREN

    PLUS    shift, and go to state 20
    MINUS   shift, and go to state 21
    TIMES   shift, and go to state 22
    DIVIDE  shift, and go to state 23
    RPAREN  shift, and go to state 25


State 19

    7 assignment: IDENTIFIER ASSIGN expression SEMICOLON •

    $default  reduce using rule 7 (assignment)


State 20

   10 expression: expression PLUS • expression

    IDENTIFIER  shift, and go to state 13
    NUMBER      shift, and go to state 14
    LPAREN      shift, and go to state 15

    expression  go to state 26


State 21

   11 expression: expression MINUS • expression

    IDENTIFIER  shift, and go to state 13
    NUMBER      shift, and go to state 14
    LPAREN      shift, and go to state 15

    expression  go to state 27


State 22

   12 expression: expression TIMES • expression

    IDENTIFIER  shift, and go to state 13
    NUMBER      shift, and go to state 14
    LPAREN      shift, and go to state 15

    expression  go to state 28


State 23

   13 expression: expression DIVIDE • expression

    IDENTIFIER  shift, and go to state 13
    NUMBER      shift, and go to state 14
    LPAREN      shift, and go to state 15

    expression  go to state 29


State 24

    6 declaration: INT IDENTIFIER ASSIGN expression SEMICOLON •

    $default  reduce using rule 6 (declaration)


State 25

   14 expression: LPAREN expression RPAREN •

    $default  reduce using rule 14 (expression)


State 26

   10 expression: expression • PLUS expression
   10           | expression PLUS expression •
   11           | expression • MINUS expression
   12           | expression • TIMES expression
   13           | expression • DIVIDE expression

    TIMES   shift, and go to state 22
    DIVIDE  shift, and go to state 23

    $default  reduce using rule 10 (expression)


State 27

   10 expression: expression • PLUS expression
   11           | expression • MINUS expression
   11           | expression MINUS expression •
   12           | expression • TIMES expression
   13           | expression • DIVIDE expression

    TIMES   shift, and go to state 22
    DIVIDE  shift, and go to state 23

    $default  reduce using rule 11 (expression)


State 28

   10 expression: expression • PLUS expression
   11           | expression • MINUS expression
   12           | expression • TIMES expression
   12           | expression TIMES expression •
   13           | expression • DIVIDE expression

    $default  reduce using rule 12 (expression)


State 29

   10 expression: expression • PLUS expression
   11           | expression • MINUS expression
   12           | expression • TIMES expression
   13           | expression • DIVIDE expression
   13           | expression DIVIDE expression •

    $default  reduce using rule 13 (expression)
